k3s/clusters/dev/infrastructure/internal-gateway/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal-gateway-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-internal
spec:
  controllerName: gateway.envoyproxy.io/internal-gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: internal
    namespace: internal-ingress
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: internal-ingress
spec:
  gatewayClassName: envoy-internal
  listeners:
    - name: web
      hostname: "*.internal.veetik.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      hostname: "*.internal.veetik.com"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-bookmarks
          - name: tls-keycloak-admin
          - name: tls-money
          - name: tls-radicale
          - name: tls-rss
          - name: tls-tasks
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [bookmarks, keycloak, money, radicale, rss, tasks]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-redirect
  namespace: internal-ingress
spec:
  parentRefs:
    - name: internal-gateway
      sectionName: web
  hostnames:
    - "*.internal.veetik.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
